Please  do  not write behind the end of line tag so that it is  possible
to   send  a   Changelog   file  to  a  line  printer  directly.  Thanks.

For your entries please follow EXACTLY this style:

_yyyy/mm/dd_[Your Name]
_
___*_filename:
_____-_description
_
___*_filename2, filename3:
_____-_description
_
_
_

                                                     -*-*- END OF LINE -*-*-



  2012/08/06  Nepomuk Otte

   * CameraAndReadout.cpp
     - The number of FADC samples was not properly set in the VBF writer 

2012/07/15  Nepomuk Otte

   * CameraAndReadout.cpp
     - Changed the way the command line options are given. Instead of just
     listing the arguments, every argument has a flag. The order is not
     important anymore. Just calling CameraAndReadout without options will
     print out the help with the options names
   * CameraAndReadout.cpp; ReadConfig.[h,cpp]
     - parameters normally in the configuration file can also be given on the
     command line. see ./CameraAndReadout -h for how this is done.
   * ReadConfig.cpp
     - the nsb rate per pixel has to given in MHz in the config file.
     ReadConfig multiplies it with 1000 to get kHz

  2012/06/18  Nepomuk Otte

   * CameraAndReadout.cpp
     - reverted to previous way of writing vbf files. Setting the number of
     pixel per telescope just before the telescope data are written to file
     did not work.

  2012/05/20  Nepomuk Otte

   * TraceGenerator.cpp
     - fixed bug that prevented the right QE etc to be applied in the
     selection of a photon.
   * TelescopeTriggerNextNeighbor;CameraAndReadout
     - added functionality that will display the traces in the triggered pixel
     that resulted in the telescope trigger. They will be displayed in Trigger
     debug mode

  2012/05/06  Nepomuk Otte

   * ReadConfig[.cpp,.h],FADC[.cpp,.h],TraceGenerator[.cpp,.h],CameraAndReadout.cpp,FADC[.cpp,.h],TelescopeTriggerNextNeighbor[.cpp,.h]